debugging serving layer